--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ set-option -g status-left-length 20
 set-option -g status-left " [%b %d %H:%M] "
 #set-option -g status-left-fg red
 set-option -g status-right-length 60
-set-option -g status-right " [ma] [#(uptime|cut -d ":" -f 5- | sed 's/^[ \t]*//' | tr -d ,)] "
+set-option -g status-right " [#(hostname)] [#(uptime|cut -d ":" -f 5- | sed 's/^[ \t]*//' | tr -d ,)] "
 
 # reload changes in tmux
 unbind r
