--- a/tmuxcolors-light.conf
+++ b/tmuxcolors-light.conf
@@ -7,26 +7,26 @@ set-option -g status-fg yellow #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg brightyellow #base00
+set-window-option -g window-status-fg colour11 #base00
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-fg colour9 #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-active-border-fg colour12 #base1
 
 # message text
 set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
+set-option -g message-fg colour9 #orange
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+set-option -g display-panes-colour colour9 #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
