Changed default command so that a new window does not start with a login shell

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,6 +73,9 @@ set-option -g status-left " [%b %d %H:%M] "
 set-option -g status-right-length 60
 set-option -g status-right " [#(hostname)] [#(uptime|cut -d ":" -f 5- | sed 's/^[ \t]*//' | tr -d ,)] "
 
+# Default command (don't start a login shell with a new window)
+set-option default-command zsh
+
 # reload changes in tmux
 unbind r
 bind r source-file ~/.tmux.conf
