Playing with window titles, remain auto off for now

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,7 @@ bind -t vi-copy y copy-selection
 bind -t vi-copy Escape cancel
 
 # fix the titles
-#set -g set-titles off
-#set -g set-titles-string "#I:#W"
+set -g set-titles off
 
 # be notified when there is activity in one of your windows
 setw -g monitor-activity off
@@ -27,7 +26,7 @@ set-option -g visual-bell off
 set-option -g bell-action any
 
 # don't rename windows automatically
-#set-window-option -g automatic-rename off
+set-window-option -g automatic-rename off
 
 # Remove default binding since we're replacing
 bind h split-window -h
